@@ -1,6 +1,7 @@
 Revision history for Perl extension Perl-MinimumVersion
 
-        - substr will not be checked if it is a method name
+        - substr will not be checked if it is a method name (Alexandr Ciornii)
+        - negative length in splice requires perl 5.5 (Alexandr Ciornii)
 
 1.21 Tue  24 Nov 2009
         - Add 'bytes' to 5.6 pragma (Alexandr Ciornii)
